# math-in-rust-doc

./: Cargo.toml  Makefile  README.md  katex-dollar-src.html  katex-dollar.html  katex-src.html  katex.html
src/: lib.rs
